--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,164 @@
-```pip-requirements
+aiofiles==24.1.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.10.0
+asttokens==3.0.0
+attrs==25.3.0
+backcall==0.2.0
+beautifulsoup4==4.13.5
+bleach==6.2.0
+blinker==1.9.0
+Brotli==1.1.0
+cachetools==5.5.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+click==8.2.1
+cloudpickle==3.1.1
+contourpy==1.3.2
+cycler==0.12.1
+decorator==5.2.1
+defusedxml==0.7.1
+docopt==0.6.2
+exceptiongroup==1.3.0
+executing==2.2.0
+fastapi==0.116.1
+fastjsonschema==2.21.2
+ffmpy==0.6.1
+filelock==3.19.1
+fonttools==4.59.1
+fsspec==2025.7.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.1
+google-api-python-client==2.179.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-genai==1.31.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+gradio==5.43.1
+gradio_client==1.12.1
+groovy==0.1.2
+grpcio==1.74.0
+grpcio-status==1.71.2
+h11==0.16.0
+hf-xet==1.1.8
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
+huggingface-hub==0.34.4
+idna==3.10
+imageio==2.37.0
+ipython==8.12.3
+jedi==0.19.2
+Jinja2==3.1.6
 joblib==1.5.1
-numpy 
-pandas==2.3.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyterlab_pygments==0.3.0
+kiwisolver==1.4.9
+lazy_loader==0.4
+lime==0.2.0.1
+linkedin_scraper==2.11.5
+llvmlite==0.44.0
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.5
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.1.3
+narwhals==2.1.2
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+networkx==3.4.2
+numba==0.61.2
+numpy==2.2.6
+nvidia-nccl-cu12==2.27.7
+orjson==3.11.2
+outcome==1.3.0.post0
+packaging==25.0
+pandas==2.3.1
+pandocfilters==1.5.1
+parso==0.8.5
+patsy==1.0.1
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==11.3.0
+pipreqs==0.5.0
+platformdirs==4.4.0
 plotly==6.3.0
-protobuf==6.32.0
+prettytable==3.16.0
+prompt_toolkit==3.0.52
+proto-plus==1.26.1
+protobuf==5.29.5
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyaml==25.7.0
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.7
+pydantic_core==2.33.2
+pydeck==0.9.1
+pydub==0.25.1
+Pygments==2.19.2
+pyparsing==3.2.3
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
-scikit_learn==1.7.1
-streamlit==1.48.1
-xgboost==3.0.4
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+pyzmq==27.0.2
+referencing==0.36.2
+requests==2.32.5
+rich==14.1.0
+rpds-py==0.27.0
+rsa==4.9.1
+ruff==0.12.10
+safehttpx==0.1.6
+scikit-image==0.25.2
+scikit-learn==1.7.1
+scipy==1.15.3
+seaborn==0.13.2
+semantic-version==2.10.0
 shap==0.48.0
-matplotlib==3.7.1
+shellingham==1.5.4
+six==1.17.0
+skops==0.13.0
+slicer==0.0.8
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.8
+stack-data==0.6.3
+starlette==0.47.2
+statsmodels==0.14.5
+streamlit==1.48.1
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tifffile==2025.5.10
+tinycss2==1.4.0
+toml==0.10.2
+tomlkit==0.13.3
+tornado==6.5.2
+tqdm==4.67.1
+traitlets==5.14.3
+typer==0.16.1
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.5.0
+uvicorn==0.35.0
+watchdog==6.0.0
+wcwidth==0.2.13
+webencodings==0.5.1
+websockets==15.0.1
+wsproto==1.2.0
+xgboost-cpu==3.0.4
+yarg==0.1.9
